<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPageOneRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPageOneForgotPassword"
        android:layout_alignBottom="@+id/tvPageOneForgotPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:text="@string/register"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPageOneForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnPageOneContinue"
        android:layout_marginRight="22dp"
        android:layout_marginTop="34dp"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPageOnePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etPageOneEmail"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPageOneEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnPageOneContinue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etPageOnePassword"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons_style"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>